--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100%;
+  font-family: cursive;
+}
+.App button{
+  background-color: blue;
+  border: none;
+  border-radius: 5px;
+  padding: 1rem 5rem 1rem 5rem;
+  color: aliceblue;
+}
+.App label {
+  display: block;
+  text-align: left;
+  padding: 15px;
+  margin-bottom: 5px;
+  font-size: 20px;
+  background-color: antiquewhite;
+  padding: 1rem 8rem 1rem 2rem;
+}
+.App label.radio+.radio {
+  margin-left: 0;
+}
+.App label.radio input {
+  margin-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
