--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 .App {
   text-align: center;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100%;
-  font-family: cursive;
+  font-family: 'Montserrat', sans-serif;
 }
+.App img{
+  margin-left: -10rem;
+  margin-right: 5rem;
+  margin-top: 5rem;
+  width: 500px;
+}
+
 .App button{
   background-color: blue;
   border: none;
   border-radius: 5px;
   padding: 1rem 5rem 1rem 5rem;
   color: aliceblue;
-  font-family: cursive;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.5rem;
+  cursor: pointer;
 }
 .App label {
   display: block;
@@ -22,14 +30,77 @@
   padding: 15px;
   margin-bottom: 5px;
   font-size: 20px;
-  background-color: skyblue;
+  background-color: transparent;
   padding: 1rem 8rem 1rem 2rem;
+}
+.App label:hover{
+  background-color: cornsilk;
 }
 .App label.radio+.radio {
   margin-left: 0;
 }
 .App label.radio input {
   margin-right: 10px;
+}
+.start{
+  margin:5rem auto;
+  background-color: transparent;
+  color: black;
+  background-color: rgba(245, 245, 245, 0.931);
+  padding: 1.5rem;
+  border-radius: 5px;
+}
+.start h1{
+  font-size: 2.5rem;
+  padding: 1rem;
+}
+.questions1{
+  display: flex;
+}
+.questions2{
+  margin-top: 3rem;
+  background-color: rgba(255, 255, 255, 0.859);
+  padding: 1rem;
+  border-radius: 5px;
+}
+.endquiz{
+  background-color: rgba(255, 255, 255, 0.859);
+  margin-top: 5rem;
+  padding: 2rem;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 500px) {
+  .App{
+    flex-direction: column;
+  }
+  .App img{
+    margin: 0;
+    width: 300px;
+  }
+  .start{
+    padding: 0.5rem;
+    width: 80%;
+  }
+  .start h1{
+    font-size: 1.8rem;
+    padding: 0.5rem;
+  }
+  .questions1{
+    flex-direction: column;
+  }
+  .questions2{
+    margin: 0;
+  }
+  .modal{
+    font-size: 1rem;
+    padding: 1rem;
+    margin-left: 2rem;
+  }
+  .endquiz{
+    font-size: 1rem;
+    padding: 1rem;
+  }
 }
 
 
